--- a/src/assets/sass/website/components/home/hero-carousel.scss
+++ b/src/assets/sass/website/components/home/hero-carousel.scss
@@ -4,7 +4,21 @@
 
 .hero-carousel{
     margin-top: 400px;
+    @include is-extra-small-mobile {
+      margin-top: 200px;
+    }
+    @include is-mobile {
+      margin-top: 250px;
+    }
+    @include is-tablet {
+      margin-top: 250px;
+    }
+
+    @include is-desktop {
+      margin-top: 300px;
+    }
     &__container{
+
       &--title{
         font-family: 'Segoe UI Bold';
         width: 80%;
@@ -13,23 +27,22 @@
         font-size: 3rem;
         text-align: left;
         @include is-extra-small-mobile {
-          padding-top: 0px;
-          font-size: 1.5rem;
+          font-size: 1.3rem;
         }
         @include is-mobile {
-          padding-top: 50px;
-          font-size: 2.2rem;
+          font-size: 1.8rem;
         }
-    
         @include is-tablet {
-          padding-top: 50px;
-          font-size: 2.2rem;
+          font-size: 2rem;
         }
-    
+  
         @include is-desktop {
-          padding-top: 50px;
+          font-size: 2rem;
+        }
+        @include is-large-desktop {
           font-size: 2.2rem;
         }
+
       }
       &--content{
         text-align: left;
@@ -38,21 +51,32 @@
       }
     }
   }
-  /deep/ .hero-bullets{
-    position: absolute;
-    bottom: 0%;
-    width: 100%;
-    margin: auto;
-  }
+
+/deep/ .hero-bullets{
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  margin: auto;
+}
 @media (max-width: 600px){
   .carousel-wrapper {
     margin-top: 0;
     min-height: auto;
   }
 }
+
+@media (min-width: 1400px) and (max-width: 1600px){
+  /deep/ .half-filled-box{
+    min-height: 300px;
+  }
+  /deep/ .hero-bullets{
+    bottom: 7%;
+  }
+}
+
   // All have vw as divide operation units must be the same for all
-$width: 47vw;
-$height: 16vw;
+$width: 50vw;
+$height: 17vw;
 $clipped-length: 3vw;
 
 $widths-and-heights: (
@@ -60,14 +84,14 @@ $widths-and-heights: (
   clipped-shape-height: $height,
   clipped-length: $clipped-length,
   clipped-shape-width-xs: (
-    $width + 50vw
+    $width + 45vw
   ),
   clipped-shape-height-xs: (
     $height + 30vw
   ),
   clipped-length-xs: $clipped-length,
   clipped-shape-width-sm: (
-    $width + 50vw
+    $width + 45vw
   ),
   clipped-shape-height-sm: (
     $height + 20vw
@@ -79,8 +103,8 @@ $widths-and-heights: (
   clipped-shape-width-lg: $width + 10vw,
   clipped-shape-height-lg: $height + 15vw,
   clipped-length-lg: $clipped-length,
-  clipped-shape-width-xlg: $width + 5vw,
-  clipped-shape-height-xlg: $height + 10vw,
+  clipped-shape-width-xlg: $width + 7vw,
+  clipped-shape-height-xlg: $height + 5vw,
   clipped-length-xlg: $clipped-length,
   clipped-shape-width-xxlg: $width,
   clipped-shape-height-xxlg: $height,
