--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -19,6 +19,7 @@ $transition-3: all 0.3s ease-in-out;
 .footer-section {
   background-color: $dark-background;
   padding-top: 175px;
+  position: relative;
   &__container {
     width: 80%;
     margin: auto;
@@ -53,7 +54,7 @@ $transition-3: all 0.3s ease-in-out;
       }
     }
 
-    .footer-socialmedia {
+    .footer-social-media {
       padding-bottom: 100px;
       .footer-followus {
         width: 108px;
@@ -87,7 +88,7 @@ $transition-3: all 0.3s ease-in-out;
         }
       }
 
-      .socialMedia {
+      .social-media {
         @include is-extra-small-mobile {
           justify-content: center;
         }
@@ -191,7 +192,7 @@ $transition-3: all 0.3s ease-in-out;
     }
   }
 
-  .CopyrightDiv {
+  .copyrights {
     color: $light-gray;
     background-color: $primary;
     a {
@@ -221,7 +222,7 @@ $transition-3: all 0.3s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 5%;
+    bottom: 30px;
     right: 5%;
     background-color: $accent;
     width: 90px;
