--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -2,6 +2,8 @@
 @import "../../color-palette.scss";
 @import "../../shared/half-clipped-shape.scss";
 
+$carousel-height: 1100px;
+
 @mixin is-1600-or-less {
   // Extra large devices (large desktops, 1200px and up)
   @media (max-width: 1600px) {
@@ -26,217 +28,252 @@
     @content;
   }
 }
-.work-carousel{
+.work-carousel {
   position: relative;
-    .work-header{
-      text-align: center;
-      padding-bottom: 100px;
-      &__sub-text{
-        color: $header-item;
-      }
-      &__title{
-        color: $header-item;
-        font-family: 'Segoe UI Bold';
-        font-size: 2.6rem;
-        letter-spacing: 4px;
-      }
-      &__view-link{
-        color: $accent;
-      }
+  .work-header {
+    text-align: center;
+    padding-bottom: 100px;
+    &__sub-text {
+      color: $header-item;
     }
-    &__bg{
-      position: absolute;
-      width: 63%;
-      right: 0;
-      height: 1120px;
-      background-color: $accent;
-      @include is-large-desktop-or-less {
-        width: 100%;
-        height: 1210px;
-     }
-      @include is-desktop-or-less {
-        height: 1280px;
-      }
-      @include is-767px-or-less {
-        height: 1440px;
-      }
+    &__title {
+      color: $header-item;
+      font-family: "Segoe UI Bold";
+      font-size: 2.6rem;
+      letter-spacing: 4px;
     }
-    &__carousel-container{
+    &__view-link {
+      color: $accent;
+    }
+  }
+  &__bg {
+    position: absolute;
+    width: 63%;
+    right: 0;
+    height: $carousel-height;
+    background-color: $accent;
+    @include is-mobile {
+    }
+    @include is-tablet {
+    }
+    @include is-large-desktop-or-less {
       width: 100%;
-      height: 1120px;
-      @include is-desktop-or-less {
+      height: 1210px;
+    }
+    @include is-desktop-or-less {
+      height: 1280px;
+    }
+    @include is-767px-or-less {
+      height: 650px;
+    }
+  }
+  &__carousel-container {
+    width: 100%;
+    height: $carousel-height;
+    @include is-mobile {
+    }
+    @include is-tablet {
+    }
+    @include is-desktop-or-less {
+      width: 100%;
+      margin: 0;
+      height: 1280px;
+    }
+    @include is-767px-or-less {
+      height: 650px;
+    }
+  }
+  &__inside {
+    position: relative;
+    &--img {
+      position: absolute;
+      left: 8%;
+      @include is-extra-small-mobile {
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: brightness(30%);
+        margin-top: 0 !important;
+      }
+      @include is-mobile {
+      }
+      @include is-tablet {
+      }
+      @include is-1600-or-less {
+        left: 2%;
+      }
+      @include is-large-desktop-or-less {
+        position: relative;
+        left: 0%;
+        margin-top: 30px;
+      }
+      img {
+        height: 100%;
         width: 100%;
-        margin: 0;
-        height: 1280px;
+        object-fit: cover;
+        object-position: center center;
+      }
+    }
+    &--title {
+      font-family: "Segoe UI Bold";
+      font-size: 2.4rem;
+      position: relative;
+      height: 48px;
+      @include is-extra-small-mobile {
+        font-size: 1.6rem;
+      }
+      @include is-mobile {
+        font-size: 1.6rem;
+      }
+      @include is-tablet {
+        font-size: 1.6rem;
+      }
+      @include is-desktop {
+        font-size: 1.6rem;
+      }
+      @include is-large-desktop {
+        font-size: 1.8rem;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        top: 55px;
+        left: 0px;
+        height: 4px;
+        width: 35%;
+        background: $header-item;
+      }
+    }
+    &--content {
+      @include is-extra-small-mobile {
+        height: 100%;
+      }
+    }
+    &--text {
+      color: $header-item;
+      width: 63%;
+      margin-left: auto;
+      @include is-extra-small-mobile {
+        font-size: 1.1rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 75vh;
+        overflow-y: auto;
+        margin: 5%;
+        padding: 10px;
+      }
+      @include is-mobile {
+        font-size: 1.1rem;
+      }
+      @include is-tablet {
+        font-size: 1.2rem;
+      }
+      @include is-desktop {
+        font-size: 1.2rem;
+      }
+      @include is-large-desktop {
+        font-size: 1.2rem;
+      }
+      @include is-large-desktop-or-less {
+        width: 90%;
+      }
+    }
+    &--text-container {
+      min-height: 650px;
+      border-right: solid 1px $header-item;
+      margin-top: 110px;
+      margin-left: 320px;
+      margin-right: 120px;
+      padding-right: 128px;
+      @include is-large-desktop-or-less {
+        margin-right: 0;
+        padding-right: 0;
+        margin-top: 50px;
+        margin-left: 0;
+        border-right: none;
+        min-height: 455px;
+      }
+      @include is-1600-or-less {
+        margin-right: 50px;
+        padding-right: 50px;
+      }
+      @include is-desktop-or-less {
+        margin-left: 0px;
+        margin-top: 0px;
+        min-height: 400px;
       }
       @include is-767px-or-less {
-        height: 1440px;
+        border-right: 0;
+        margin-right: 0px;
+        padding-right: 30px;
       }
     }
-    &__inside{
-      &--img{
-        position: absolute;
-        left: 8%;
-        @include is-1600-or-less {
-          left: 2%;
-        }
-        @include is-large-desktop-or-less {
-          position: relative;
-          left: 0%;
-       }
-        img{
-          height: 100%;
-          width: 100%;
-          object-fit: cover;
-          object-position: center center;
-        }
-      }
-      &--title{
-        font-family: 'Segoe UI Bold';
-        font-size: 2.4rem;
-        position: relative;
-        height: 48px;
-        @include is-extra-small-mobile {
-          font-size: 1.6rem;
-        }
-        @include is-mobile {
-          font-size: 1.6rem;
-        }
-        @include is-tablet {
-          font-size: 1.6rem;
-        }
-        @include is-desktop {
-          font-size: 1.6rem;
-        }
-        @include is-large-desktop {
-          font-size: 1.8rem;
-        }
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: 0;
-          top: 55px;
-          left: 0px;
-          height: 4px;
-          width: 35%;
-          background: $header-item;
-        }
-      }
-      &--text{
-        color: $header-item;
-        width: 63%;
-        margin-left: auto;
-        @include is-extra-small-mobile {
-          font-size: 1.1rem;
-        }
-        @include is-mobile {
-          font-size: 1.1rem;
-        }
-        @include is-tablet {
-          font-size: 1.2rem;
-        }
-        @include is-desktop {
-          font-size: 1.2rem;
-        }
-        @include is-large-desktop {
-          font-size: 1.2rem;
-        }
-        @include is-large-desktop-or-less {
-          width: 90%;
-       }
-      }
-      &--text-container{
-        min-height: 650px;
-        border-right: solid 1px $header-item;
-        margin-top: 110px;
-        margin-left: 320px;
-        margin-right: 120px;
-        padding-right: 128px;
-        @include is-large-desktop-or-less {
-          margin-right: 0;
-          padding-right: 0;
-          margin-top: 50px;
-          margin-left: 0;
-          border-right: none;
-          min-height: 455px;
-       }
-        @include is-1600-or-less {
-          margin-right: 50px;
-          padding-right: 50px;
-        }
-        @include is-desktop-or-less{
-          margin-left: 0px;
-          margin-top: 0px;
-          min-height: 400px;
-        }
-        @include is-767px-or-less {
-          border-right: 0;
-          margin-right: 0px;
-          padding-right: 30px;
-        }
-      }
-    }
-    &__btn{
-      display: flex;
-      justify-content: center;
-    }
+  }
+  &__btn {
+    display: flex;
+    justify-content: center;
+  }
 }
 
-/deep/ div.outline-box__inside.outline-box__inside--is-button{
+/deep/ div.outline-box__inside.outline-box__inside--is-button {
   background-color: $header-item;
   color: $accent;
   width: 155px;
   font-size: 1.1rem;
-  &:hover{
+  &:hover {
     background-color: $header-item;
     color: $accent;
   }
 }
-/deep/ .outline-box{
-  height: 50px!important;
-  width: 158px!important;
+/deep/ .outline-box {
+  height: 50px !important;
+  width: 158px !important;
 }
-/deep/ .hero-bullets{
+/deep/ .hero-bullets {
   display: none;
 }
-/deep/ .carousel-navigation{
+/deep/ .carousel-navigation {
   position: absolute;
   right: 81px;
-  bottom: 27%;
+  bottom: 15%;
+  z-index: 100;
   @include is-1600-or-less {
-    right: 81px;
+    right: 1%;
   }
   @include is-large-desktop-or-less {
-    bottom: 0%;
- }
-  @include is-desktop-or-less{
-    bottom: 9%;
+    bottom: 10%;
+  }
+  @include is-desktop-or-less {
+    bottom: 10%;
   }
   @include is-tablet {
-    bottom: 3%;
-  }
-  @include is-767px-or-less {
-    bottom: 1%;
+    bottom: 10%;
     right: 2%;
   }
-  button{
-    margin:5px;
+  @include is-767px-or-less {
+    bottom: 15%;
+    right: 2%;
+  }
+  button {
+    margin: 5px;
     background-color: transparent;
     border: none;
     outline: none;
-    img{
+    img {
       width: 85%;
     }
   }
 }
-/deep/ .half-filled-box{
-  padding: 0!important;
+/deep/ .half-filled-box {
+  padding: 0 !important;
 }
-/deep/  .carousel-wrapper {
+/deep/ .carousel-wrapper {
   margin-top: 0;
   min-height: auto;
 }
-  // All have vw as divide operation units must be the same for all
+// All have vw as divide operation units must be the same for all
 $width: 750px;
 $height: 750px;
 $clipped-length: 90px;
@@ -251,7 +288,7 @@ $widths-and-heights: (
   clipped-shape-height-xs: (
     $height - 250px
   ),
-  clipped-length-xs: $clipped-length,
+  clipped-length-xs: 1px,
   clipped-shape-width-sm: (
     $width - 250px
   ),
