work main page finished

--- a/src/assets/sass/website/components/about/about-section.scss
+++ b/src/assets/sass/website/components/about/about-section.scss
@@ -55,7 +55,7 @@
         }
         &--is-image{
             height: 809px;
-            @include cover-image("~/images/about.png");
+            @include cover-image("~/images/stadiumpic.png");
             filter: brightness(80%);
         }
   }
