initialize dashboard and its authorization with admin login

--- a/src/assets/sass/website/shared/spinner.scss
+++ b/src/assets/sass/website/shared/spinner.scss
@@ -44,10 +44,10 @@
   display: block;
   width: 40px;
   height: 40px;
-  border: 3px solid $primary;
+  border: 3px solid $accent;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: $primary transparent transparent transparent;
+  border-color: $accent transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
