--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -4,6 +4,7 @@ html,
 body {
   font-family: "Segoe UI";
   overflow-x: hidden;
+  background-color: $primary !important;
 }
 
 body {
@@ -52,4 +53,5 @@ body {
 
 .error-message {
   color: red;
+  margin: 0;
 }
