add departments and jobs code in dashboard

--- a/src/assets/sass/website/shared/breadcrumb.scss
+++ b/src/assets/sass/website/shared/breadcrumb.scss
@@ -5,6 +5,7 @@
   &__link {
     font-size: 20px;
     color: $header-item;
+    text-transform: capitalize;
   }
   &__separator {
     color: $gray;
