--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -274,7 +274,7 @@ body > .navbar-collapse {
 }
 
 .main-panel {
-  background: rgba(203, 203, 210, 0.15);
+  background: #eee;
   position: relative;
   float: right;
   width: $sidebar-width;
