add animations to hero carousel and services carousel in home

--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -1,5 +1,6 @@
 $primary: #1c222a;
 $accent: #598cc2;
+$dark-accent: #2c75c4;
 $dark-background: #151a20;
 $form-background: #222d3a;
 $header-item: white;
