--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -24,6 +24,8 @@
   }
   &__text {
     z-index: 10;
+    position: relative;
+    height: 100%;
   }
   &__img-wrapper {
     z-index: 9;
@@ -113,6 +115,11 @@
       max-width: 100vw;
       filter: brightness(30%);
     }
+  }
+  &__btn {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
   }
 }
 
