--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -29,9 +29,6 @@
   }
   &__img-wrapper {
     z-index: 9;
-    animation: xx;
-    animation-duration: 6.9s;
-    animation-timing-function: ease-in-out;
     @include is-extra-small-mobile {
       position: absolute;
       top: 0;
@@ -103,6 +100,9 @@
     object-fit: cover;
     max-width: 680px;
     height: 100%;
+    animation: xx;
+    animation-duration: 10s;
+    animation-timing-function: cubic-bezier(0, 0.47, 0.36, 0.36);
     @include is-extra-small-mobile {
       max-width: 100vw;
       height: 100%;
@@ -247,9 +247,6 @@ div /deep/ {
 @keyframes xx {
   0% {
     transform: scale(0.8);
-  }
-  30% {
-    transform: scale(0.86);
   }
   100% {
     transform: scale(1);
