--- a/src/assets/sass/website/components/work/work-main-page.scss
+++ b/src/assets/sass/website/components/work/work-main-page.scss
@@ -2,60 +2,60 @@
 @import "../../color-palette.scss";
 @import "../../shared/half-clipped-shape.scss";
 
-.work-page-wrapper{
-    width: 80%;
-    margin: auto;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    user-select: none;
-    &__content-wrapper{
-        &:hover{
-            img{
-                filter: brightness(50%);
-                clip-path: polygon(11% 0, 100% 0, 100% 90%, 90% 100%, 0 100%, 0 11%);
-            }
-            .work-page-wrapper__text{
-                bottom: 50%;
-            }
-            .work-page-wrapper__content{
-                p{
-                    opacity: 1;
-                }
-            }
+.work-page-wrapper {
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  user-select: none;
+  &__content-wrapper {
+    &:hover {
+      img {
+        filter: brightness(50%);
+        clip-path: polygon(11% 0, 100% 0, 100% 90%, 90% 100%, 0 100%, 0 11%);
+      }
+      .work-page-wrapper__text {
+        bottom: 50%;
+      }
+      .work-page-wrapper__content {
+        p {
+          opacity: 1;
         }
+      }
     }
-    &__content{
-        position: relative;
-        color: $header-item;
-        img{
-            width: 100%;
-            min-height: 500px;
-            object-fit: cover;
-            clip-path: polygon(0% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0%);
-            transition: all .2s ease-in-out;
-        }
+  }
+  &__content {
+    position: relative;
+    color: $header-item;
+    img {
+      width: 100%;
+      min-height: 500px;
+      object-fit: cover;
+      clip-path: polygon(0% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0%);
+      transition: all 0.2s ease-in-out;
     }
-    p{
-        font-size: 1.1rem;
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        top: 0%;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: all .5s ease-in-out;
+  }
+  p {
+    font-size: 1.1rem;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0%;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all 1.5s ease-in;
+  }
+  &__text {
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0%;
+    h2 {
+      font-family: "Segoe UI Bold";
+      font-size: 1.8rem;
     }
-    &__text{
-        transition: all .5s ease-in-out;
-        text-align: center;
-        position: absolute;
-        width: 100%;
-        bottom: 0%;
-        h2{
-            font-family: 'Segoe UI Bold';
-            font-size: 1.8rem;
-        }
-    }
+  }
 }
