--- a/src/assets/sass/website/components/services/details-section.scss
+++ b/src/assets/sass/website/components/services/details-section.scss
@@ -2,7 +2,15 @@
 @import "../../variables.scss";
 @import "../../mixins.scss";
 
-
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: $accent;
+}
+::-webkit-scrollbar-thumb{
+  background: $dark-background;
+}
 .section-container{
     background-color: $dark-background;
     padding: 110px;
@@ -10,18 +18,19 @@
     padding-bottom: 70px;
     margin-top: 50px;
     margin-bottom: 50px;
-    clip-path: polygon(9% 0, 100% 0, 100% 92%, 89% 100%, 0 100%, 0 9%);
+    max-height: 950px;
+    clip-path: polygon(7% 0, 100% 0, 100% 90%, 93% 100%, 0 100%, 0 10%);
     @include is-extra-small-mobile {
-        padding: 50px;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+        padding: 40px;
+        clip-path: polygon(14% 0, 100% 0, 100% 92%, 86% 100%, 0 100%, 0 8%);
     }
     @include is-mobile {
         padding: 50px;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+        clip-path: polygon(11% 0, 100% 0, 100% 93%, 89% 100%, 0 100%, 0 7%);
     }
     @include is-tablet {
         padding: 50px;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+        clip-path: polygon(9% 0, 100% 0, 100% 93%, 90% 100%, 0 100%, 0 8%)
     }
     @include is-desktop {
         padding: 50px;
@@ -31,7 +40,7 @@
         color: $accent;
         font-family: 'Segoe UI Bold';
         @include is-extra-small-mobile {
-            font-size:2rem;
+            font-size:1.6rem;
           }
           @include is-mobile {
             font-size:2rem;
@@ -52,8 +61,8 @@
             width: 220px;
             background: $accent;
             @include is-extra-small-mobile {
-                top: 50px;
-                width: 220px;
+                top: 44px;
+                width: 200px;
               }
               @include is-mobile {
                 top: 50px;
@@ -71,12 +80,28 @@
     }
     &__media{
         padding-bottom: 50px;
+        max-height: 550px;
+        overflow: hidden;
         img{
             width: 100%;
+            height: 100%;
             object-fit: cover;
+            padding-bottom: 50px;
         }
         video{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
+            padding-bottom: 50px;
+        }
+        @include is-extra-small-mobile {
+          padding-top: 40px;
+        }
+        @include is-mobile {
+          padding-top: 40px;
+        }
+        @include is-tablet {
+          padding-top: 40px;
         }
     }
     &__template{
@@ -84,6 +109,43 @@
         p{
             font-size: 1.3rem;
             color: $sub-text;
+            padding: 0;
+            max-height: 400px;
+            overflow-y: scroll;
+            @include is-extra-small-mobile {
+              font-size: 1rem;
+            }
+            @include is-mobile {
+              font-size: 1rem;
+            }
+            @include is-tablet {
+              font-size: 1rem;
+            }
+            @include is-desktop {
+              font-size: 1.2rem;
+            }
         }
     }
+}
+.sections-temp4{
+  max-height: 1260px;
+  clip-path: polygon(7% 0, 100% 0, 100% 92.5%, 93% 100%, 0 100%, 0 7.5%);
+  @include is-extra-small-mobile {
+      padding: 40px;
+      clip-path: polygon(13% 0, 100% 0, 100% 95%, 87% 100%, 0 100%, 0 5%);
+
+  }
+  @include is-mobile {
+      padding: 50px;
+      clip-path: polygon(10% 0, 100% 0, 100% 94%, 90% 100%, 0 100%, 0 6%)
+  }
+  @include is-tablet {
+      padding: 50px;
+      max-height: 1430px;
+      clip-path: polygon(10% 0, 100% 0, 100% 94%, 90% 100%, 0 100%, 0 6%);
+  }
+  @include is-desktop {
+      padding: 50px;
+      clip-path: polygon(7% 0, 100% 0, 100% 92.5%, 93% 100%, 0 100%, 0 7.5%);
+  }
 }
