--- a/src/assets/sass/website/components/services/details-section.scss
+++ b/src/assets/sass/website/components/services/details-section.scss
@@ -36,8 +36,9 @@
   &__title {
     color: $accent;
     font-family: "Segoe UI Bold";
-    text-align:left;
+    text-align: left;
     font-size: 2.3rem;
+    height: 65px;
     @include is-extra-small-mobile {
       font-size: 1.6rem;
     }
@@ -78,9 +79,10 @@
     }
   }
   &__media {
-    max-height: $template-height / 1.4;
+    max-height: $template-height / 1.2;
     overflow: hidden;
     outline: none;
+    // margin: auto;
     &--img {
       height: 100%;
       width: 100%;
@@ -98,6 +100,9 @@
     &--slider {
       height: 100%;
       width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       img {
         object-fit: cover;
         height: 100%;
@@ -106,10 +111,13 @@
     &--video {
       height: 100%;
       width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       video {
-        height: 100%;
+        // height: 100%;
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
 
@@ -142,7 +150,7 @@
       font-size: 1.2rem;
       color: $sub-text;
       padding: 0;
-      max-height: $template-height/1.4;
+      max-height: $template-height/1.2;
       overflow-y: auto;
       text-align: justify;
       line-height: 40px;
