--- a/src/assets/sass/website/components/work/work-details-section.scss
+++ b/src/assets/sass/website/components/work/work-details-section.scss
@@ -15,6 +15,13 @@
 .work-details-sections{
     width: 80%;
     margin: auto;
+    color: $header-item;
+    @include is-extra-small-mobile {
+      width: 90%;
+    }
+    @include is-mobile {
+      width: 90%;
+    }
     &__section{
         margin: 60px 0 60px 0;
     }
@@ -26,7 +33,7 @@
         font-size: 2.3rem;
         height: 65px;
         @include is-extra-small-mobile {
-          font-size: 1.4rem;
+          font-size: 1.1rem;
         }
         @include is-mobile {
           font-size: 1.8rem;
@@ -73,7 +80,7 @@
         font-size: 2.3rem;
         height: 65px;
         @include is-extra-small-mobile {
-          font-size: 1.4rem;
+          font-size: 1.1rem;
         }
         @include is-mobile {
           font-size: 1.8rem;
@@ -126,6 +133,18 @@
 
 /deep/ .half-filled-box{
     padding: 70px!important;
+    @include is-extra-small-mobile {
+      padding: 20px!important;
+    }
+    @include is-mobile {
+      padding: 30px!important;
+    }
+    @include is-tablet {
+      padding: 40px!important;
+    }
+    @include is-desktop {
+      padding: 50px!important;
+    }
 }
 // All have % as divide operation units must be the same for all
 $width: 100%;
@@ -137,7 +156,7 @@ $widths-and-heights: (
   clipped-shape-height: $height,
   clipped-length: $clipped-length,
   clipped-shape-width-xs: (
-    $width + 10%
+    $width
   ),
   clipped-shape-height-xs: (
     $height + 90%
